--- a/_config.yml
+++ b/_config.yml
@@ -9,18 +9,13 @@ name: Deannia Lucas
 description: Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://avatars.githubusercontent.com/u/105459418?v=4
 #
 # Flags below are optional
 #
 
 # Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
+  email: dlucas14@depaul.edu
   github: barryclark/jekyll-now
   instagram:
   linkedin:
