--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,9 @@ avatar: https://avatars.githubusercontent.com/u/105459418?v=4
 
 # Includes an icon in the footer for each username you enter
   email: dlucas14@depaul.edu
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  github: jlucas/jekyll-now
+  instagram: dee_best262
+  linkedin: https://www.linkedin.com/in/deannia-lucas-12b7b9b8/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
